<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_card"
    app:cardBackgroundColor="@color/backgroundColor"
    android:layout_margin="@dimen/margin2x"
    app:cardCornerRadius="16dp"
    android:layout_width="match_parent"
    android:layout_height="250dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin2x">

        <TextView
            android:id="@+id/details_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lora_bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/appearance" />

        <TextView
            android:id="@+id/height"
            style="@style/appearanceTitleTextStyle"
            android:text="@string/height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_headline" />

        <TextView
            android:id="@+id/weight"
            style="@style/appearanceTitleTextStyle"
            android:text="@string/weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/height"/>

        <TextView
            android:id="@+id/height_text"
            style="@style/appearanceTextStyle"
            android:textColor="@color/brandColor"
            app:layout_constraintBottom_toBottomOf="@+id/height"
            app:layout_constraintStart_toEndOf="@+id/height"
            app:layout_constraintTop_toBottomOf="@+id/details_headline"
            tools:text="188 cm" />

        <TextView
            android:id="@+id/weight_text"
            style="@style/appearanceTextStyle"
            android:textColor="@color/brandColor"
            app:layout_constraintBottom_toBottomOf="@+id/weight"
            app:layout_constraintStart_toEndOf="@+id/weight"
            tools:text="95 kg" />

        <TextView
            android:id="@+id/race"
            style="@style/appearanceTitleTextStyle"
            android:text="@string/race"
            app:layout_constraintStart_toEndOf="@+id/vertical_line"
            app:layout_constraintTop_toBottomOf="@+id/details_headline" />

        <TextView
            android:id="@+id/gender"
            style="@style/appearanceTitleTextStyle"
            android:text="@string/gender"
            app:layout_constraintStart_toEndOf="@+id/vertical_line"
            app:layout_constraintTop_toBottomOf="@+id/height" />

        <TextView
            android:id="@+id/race_text"
            style="@style/appearanceTextStyle"
            android:textColor="@color/brandColor"
            app:layout_constraintBottom_toBottomOf="@+id/race"
            app:layout_constraintStart_toEndOf="@+id/race"
            tools:text="Human" />

        <TextView
            android:id="@+id/gender_text"
            style="@style/appearanceTextStyle"
            android:textColor="@color/brandColor"
            app:layout_constraintBottom_toBottomOf="@+id/gender"
            app:layout_constraintStart_toEndOf="@+id/gender"
            tools:text="Male" />

        <View
            android:id="@+id/vertical_line"
            android:layout_width="1dp"
            android:layout_height="110dp"
            android:background="@color/secondaryBrandColor"
            app:layout_constraintBottom_toTopOf="@+id/previous_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_headline" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_button"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/lora_bold"
            android:background="@drawable/next_button_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/previous_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@color/backgroundColor"
            android:text="@string/previous"
            android:textAllCaps="false"
            android:textColor="@color/darkGrey"
            app:layout_constraintBottom_toBottomOf="@+id/next_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/next_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>